sh2c/tests/fixtures/diag_span_each_line_redecl.sh2
func main() {
    let line = 0;
    pipe { print("hi"); } | each_line line { // Error: redeclaration
    }
}
